# CUDA-Kernel-Benchmarking-Tool

./: .gitignore  CMakeLists.txt  README.md  a.out  cuda-test.code-workspace
include/: kernel.cuh  timer.hpp
src/: benchmark.cu  kernel.cu  main.cu
